@@ -35,9 +35,29 @@
             <summary>
             </summary>
             <bugs>
+                <bug id="2004" tool="jira">
+                    <description>
+                        SVN moved JDO files from src/main/resources into cpa/src/main/resources.
+                    </description>
+                    <contributor>
+                        <name>Ralf Joachim</name>
+                        <email>ralf.joachim@syscon.eu</email>
+                    </contributor>
+                    <submitter>
+                        <name>Ralf Joachim</name>
+                        <email>ralf.joachim@syscon.eu</email>
+                    </submitter>
+                    <reporter>
+                        <name>Ralf Joachim</name>
+                        <email>ralf.joachim@syscon.eu</email>
+                    </reporter>
+                    <type>Enh.</type>
+                    <module>JDO</module>
+                    <date>20070607</date>
+                </bug>
                 <bug id="2001" tool="jira">
                     <description>
-                        SVN moved JDO files from src/main into cpa/src/main/java.
+                        SVN moved JDO files from src/main/java into cpa/src/main/java.
                     </description>
                     <contributor>
                         <name>Ralf Joachim</name>
